--- a/index-grid.html
+++ b/index-grid.html
@@ -12,10 +12,18 @@
 <body>
    <div class="content">
       <div class="item item-big"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
-      <div class="item"></div>
+      <div class="item">
+         <img src="img/woman.png" alt="photo">
+      </div>
+      <div class="item">
+         <img src="img/wemen.png" alt="photo">
+      </div>
+      <div class="item">
+         <img src="img/girl.png" alt="photo">
+      </div>
+      <div class="item">
+         <img src="img/car2.png" alt="photo">
+      </div>
    </div>
 </body>
 
