--- a/index-grid.html
+++ b/index-grid.html
@@ -14,15 +14,43 @@
       <div class="item item-big"></div>
       <div class="item">
          <img src="img/woman.png" alt="photo">
+         <div class="item-text">
+            <p class="item-date">NOVEMBER 24,2020</p>
+            <h2 class="item-heading">HOW TO FIND
+               DESIGN INSPIRATION IN THE SIMPLE THINGS
+               AROUND YOU
+            </h2>
+         </div>
       </div>
       <div class="item">
          <img src="img/wemen.png" alt="photo">
+         <div class="item-text">
+            <p class="item-date">NOVEMBER 24,2020</p>
+            <h2 class="item-heading">HOW TO FIND
+               DESIGN INSPIRATION IN THE SIMPLE THINGS
+               AROUND YOU
+            </h2>
+         </div>
       </div>
       <div class="item">
          <img src="img/girl.png" alt="photo">
+         <div class="item-text">
+            <p class="item-date">NOVEMBER 24,2020</p>
+            <h2 class="item-heading">HOW TO FIND
+               DESIGN INSPIRATION IN THE SIMPLE THINGS
+               AROUND YOU
+            </h2>
+         </div>
       </div>
       <div class="item">
          <img src="img/car2.png" alt="photo">
+         <div class="item-text">
+            <p class="item-date">NOVEMBER 24,2020</p>
+            <h2 class="item-heading">HOW TO FIND
+               DESIGN INSPIRATION IN THE SIMPLE THINGS
+               AROUND YOU
+            </h2>
+         </div>
       </div>
    </div>
 </body>
