--- a/index-grid.html
+++ b/index-grid.html
@@ -6,12 +6,18 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="/css/style.css">
+
    <title>Document</title>
+
 </head>
 
 <body>
    <div class="content">
-      <div class="item item-big"></div>
+      <div class="item item-big">
+         <p class="item-date item-date-car">NOVEMBER 20,2020</p>
+         <h2 class="item-heading item-car-color">FANTASTIC DESIGNS OF 2020 CONCEPT CARS
+         </h2>
+      </div>
       <div class="item">
          <img src="img/woman.png" alt="photo">
          <div class="item-text">
